# ResilioZ

./: .gitignore  CMakeLists.txt  README.md  Technical_Report.md  build.sh  config.json  run.sh  run_backup.sh  uninstall.sh
assets/: HPE.txt  HPE_Black.txt  HPE_Large.txt  HPE_new.txt  font.txt
assets/icons/svgs/solid/: mobile-screen-button.svg:Zone.Identifier
assets/images/: backup.png:Zone.Identifier  restore.png:Zone.Identifier
data/: repodata.json
include/: backup_engine.h  backup_interface.h  chunk_hasher.h  compression_handler.h  compression_policy.h  file_scanner.h  file_selector.h  logger.h  metadata_manager.h  nfs_handler.h  repo_manager.h  storage_selector.h  storageindex.h  test.h  ui_handler.h
include/backup/: backup.h  backup.hpp  chunker.hpp  differential_backup.h  full_backup.h  progress.hpp  restore.hpp
include/backup_restore/: all.h  backup.hpp  progress.hpp  restore.hpp
include/gui/: main_window.h
include/gui/decorators/: core.h  message_box.h  progress_box.h
include/gui/dialog/: attach_schedule_dialog.h  backup_verification_dialog.h  create_repository_dialog.h  create_schedule_dialog.h  delete_repository_dialog.h  delete_schedule_dialog.h  list_repositories_dialog.h  list_schedules_dialog.h  use_repository_dialog.h
include/gui/tabs/: backup_tab.h  restore_tab.h  services_tab.h
include/init/: cli.h  gui.h  init.h
include/repositories/: all.h  local_repository.h  nfs_repository.h  remote_repository.h  repository.h
include/schedulers/: client.h  schedule.h  scheduler.h  server.h
include/services/: all.h  backup_service.h  repository_service.h  scheduler_service.h  service.h
include/systems/: all.h  backup_system.h  restore_system.h  services_system.h  system.h
include/userio/: cli_userio.h  gui_userio.h  userio.h
include/utils/: backup_logger.h  backup_utils.h  encryption_util.h  encryption_utils.h  error_util.h  input.h  logger.h  metadata_logger.h  prompter.h  repodata_manager.h  scheduler_request_manager.h  setup.h  time_util.h  user_io.h  utils.h  validator.h
src/: backup-ui.cpp  main.cpp  main_gui.cpp  scheduler.cpp  scheduler_client.cpp  scheduler_server.cpp  test.cpp
src/backup/: README.md  backup.cpp  backup_engine.cpp  backup_interface.cpp  chunker.cpp  differential_backup.cpp  full_backup.cpp  nfs_handler.cpp  progress.cpp  restore.cpp
src/backup_restore/: backup.cpp  chunker.cpp  progress.cpp  restore.cpp
src/file_selector/: file_selector.cpp
src/gui/: main_window.cpp  main_window.ui
src/gui/decorators/: core.cpp  message_box.cpp  progress_box.cpp
src/gui/dialog/: attach_schedule_dialog.cpp  attach_schedule_dialog.ui  backup_verification_dialog.cpp  backup_verification_dialog.ui  create_repository_dialog.cpp  create_repository_dialog.ui  create_schedule_dialog.cpp  create_schedule_dialog.ui  delete_repository_dialog.cpp  delete_repository_dialog.ui  delete_schedule_dialog.cpp  delete_schedule_dialog.ui  list_repositories_dialog.cpp  list_repositories_dialog.ui  list_schedules_dialog.cpp  list_schedules_dialog.ui  use_repository_dialog.cpp  use_repository_dialog.ui
src/gui/resources/: assets.qrc
src/gui/tabs/: backup_tab.cpp  backup_tab.ui  restore_tab.cpp  restore_tab.ui  services_tab.cpp  services_tab.ui
src/incremental_backup/: chunk_hasher.cpp  compression_handler.cpp  compression_policy.cpp  file_scanner.cpp  metadata_manager.cpp  ui_handler.cpp
src/init/: cli.cpp  gui.cpp
src/logger/: logger.cpp
src/repo_manager/: repo_manager.cpp
src/repositories/: local_repository.cpp  nfs_repository.cpp  remote_repository.cpp  repository.cpp
src/schedulers/: client.cpp  scheduler.cpp  server.cpp
src/services/: backup_service.cpp  repository_service.cpp  scheduler_service.cpp
src/storage_selector/: storage_selector.cpp
src/storageindex/: storageindex.cpp
src/systems/: backup_system.cpp  restore_system.cpp  services_system.cpp
src/userio/: cli_userio.cpp  gui_userio.cpp
src/utils/: backup_logger.cpp  backup_utils.cpp  encryption_util.cpp  encryption_utils.cpp  error_util.cpp  input.cpp  logger.cpp  metadata_logger.cpp  prompter.cpp  repodata_manager.cpp  scheduler_request_manager.cpp  setup.cpp  time_util.cpp  user_io.cpp  validator.cpp
temp/backup/: 20250618_102111  20250618_113221
